--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -85,21 +85,22 @@
 			"title": "IT",
 			"statistical": "Thống kê",
 			"create": "Tạo yêu cầu mới",
-			"list": "Danh sách đơn đã tạo",
-			"setting": "Cài đặt"
+			"it_form_wait_purchase": "Đang chờ"
 		},
 		"purchase": {
-			"title": "Mua hàng",
+			"title": "Mua bán",
 			"statistical": "Thống kê",
 			"create": "Tạo yêu cầu mới",
-			"list": "Danh sách đơn đã tạo"
+			"quote": "Danh sách chờ báo giá"
 		},
 		"approval": {
 			"title": "Phê duyệt",
 			"pending_approval": "Chờ duyệt",
 			"assigned": "Được giao",
 			"history_approval": "Lịch sử duyệt",
-			"resolved": "Đã xử lý xong"
+			"resolved": "Đã xử lý xong",
+			"list_wait_confirm": "Chờ xác nhận",
+			"list_wait_quote": "Đang chờ báo giá"
 		}
 	},
 
@@ -323,5 +324,18 @@
 			"view": "Xem",
 			"note": "Ghi chú"
 		}
+	},
+	"status": {
+		"pending": "Chờ duyệt",
+		"in_process": "Đang xử lý",
+		"completed": "Hoàn thành",
+		"reject": "Từ chối",
+		"wait_hr": "Chờ HR",
+		"final_approval": "Duyệt cuối",
+		"assigned": "Được giao",
+		"wait_confirm": "Chờ xác nhận",
+		"wait_quote": "Chờ báo giá",
+		"wait_po": "Chờ PO",
+		"wait_delivery": "Chờ giao hàng"
 	}
 }
