--- a/src/i18n/locales/en-translation.json
+++ b/src/i18n/locales/en-translation.json
@@ -91,7 +91,7 @@
 			"title": "Purchasing",
 			"statistical": "Statistical",
 			"create": "Create new request",
-			"quote": "Item wait quote"
+			"quote": "Response quote"
 		},
 		"approval": {
 			"title": "Approval",
