--- a/src/i18n/locales/vi-translation.json
+++ b/src/i18n/locales/vi-translation.json
@@ -91,7 +91,7 @@
 			"title": "Mua bán",
 			"statistical": "Thống kê",
 			"create": "Tạo yêu cầu mới",
-			"quote": "Danh sách chờ báo giá"
+			"quote": "Phản hồi báo giá"
 		},
 		"approval": {
 			"title": "Phê duyệt",
