--- a/src/i18n/locales/en/hr.json
+++ b/src/i18n/locales/en/hr.json
@@ -104,10 +104,10 @@
             "unit": "Unit",
             "reason": "Reason",
             "handling_method": "Handling method",
-            "verbal_reprimand": "Verbal Reprimand",
-            "suspension_without_pay": "Suspension Without Pay",
-            "written_disciplinary_notice": "Written Disciplinary Notice",
-            "job_reassignment_with_salary_reduction": "Job Reassignment With Salary Reduction",
+            "verbal_reprimand": "Verbal warning",
+            "suspension_without_pay": "Suspension without pay",
+            "written_disciplinary_notice": "Written warning",
+            "job_reassignment_with_salary_reduction": "Job transfer with salary reduction",
             "union_member_responsibility": "Union member responsibility",
             "choose": "Choose",
             "note_approval_flow": "Approval process: (1) Union representative, (2) Department Manager, (3) HR & Administration Director",
