--- a/src/i18n/locales/en/purchase.json
+++ b/src/i18n/locales/en/purchase.json
@@ -2,23 +2,24 @@
     "statistical": {
         "title": "Statistical",
         "time": "Time",
-        "total": "Total",
-        "inprocess": "In Process",
+        "total": "Total request",
         "completed": "Completed",
-        "pending": "Pending",
-        "total_request": "Total request",
-        "total_by_type": "Total request by type",
+        "reject": "Rejected",
+        "input_quote": "Waiting for quotation input",
+        "approval_quote": "Waiting for quotation approval",
+        "wait_po": "Wait PO",
+        "wait_delivery": "Wait delivery",
+        "total_by_month": "Total request by month",
         "total_by_dept": "Total request by department",
         "recent_request": "Recent request",
-        "content": "Title",
-        "user_sent": "User sent",
-        "dept": "Department",
-        "time_sent": "Time sent",
-        "status": "Status",
-        "priority": "Priority"
+        "code": "Code",
+        "requester": "Created by",
+        "department": "Department request",
+        "created_at": "Created at",
+        "status": "Status"
     },
     "create": {
-        "title": "Purchase Request",
+        "title": "Create purchase",
         "btn_list": "List",
         "request_date": "Request Date",
         "text_title_category_buy": "Purchase Item List",
@@ -43,6 +44,12 @@
         "status": "Status",
         "action": "Action",
         "edit": "Edit"
+    },
+    "detail": {
+        "title": "Detail purchase"
+    },
+    "update": {
+        "title": "Update purchase"
     },
     "setting": {
 
